--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'United States -- Politics and government -- 1789-1809'
 - !lcc 'E300'
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Personal narratives'
+- GITenberg
 title: Memoirs of Aaron Burr, Volume 2.
 url: http://www.gutenberg.org/ebooks/7851
